--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.AddMemberActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -12,31 +12,32 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         app:title="앨범 목록" />
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        >
+        android:paddingRight="10dp">
+
         <TextView
             android:id="@+id/member_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="4dp"
-            android:text="앨범에 연결된 계정을 확인할 수 있습니다."
-            />
+            android:text="앨범에 연결된 계정을 확인할 수 있습니다." />
+
         <View
-            android:layout_below="@+id/member_info"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#000000"/>
-        <androidx.recyclerview.widget.RecyclerView
             android:layout_below="@+id/member_info"
+            android:background="#000000" />
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/member_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/member_info" />
     </RelativeLayout>
 </RelativeLayout>
