--- a/damda/app/src/main/res/layouts/activity/layout/activity_find_password.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_find_password.xml
@@ -5,108 +5,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity">
+
     <ImageView
-        android:paddingTop="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/scroll"
         android:layout_alignParentTop="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo_title"/>
+        android:paddingTop="4dp"
+        android:src="@drawable/logo_title" />
+
     <ScrollView
         android:id="@+id/scroll"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/signin_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:layout_alignParentBottom="true">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/editEmailLayout"
+        <LinearLayout
+            android:id="@+id/signin_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:hint="@string/email"
-                android:id="@+id/editEmail"
-                android:layout_width="match_parent"
-                android:maxLines="1"
-                android:maxLength="20"
-                android:inputType="text"
-                android:layout_height="wrap_content"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnCheckExistID"
-            android:layout_width="match_parent"
-            android:text="임시 비밀번호 보내기"
-            android:textColor="@color/white"
-            android:layout_height="40dp" />
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/changePWDLayout"
-            android:layout_width="match_parent"
-            android:hint="임시 비밀번호"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/changePWD"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editEmailLayout"
                 android:layout_width="match_parent"
-                android:maxLines="1"
-                android:maxLength="20"
-                android:inputType="text"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/editPWDLayout"
-            android:layout_width="match_parent"
-            android:hint="새로운 비밀번호"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content">
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/editPWD"
+                <EditText
+                    android:id="@+id/editEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btnCheckExistID"
                 android:layout_width="match_parent"
-                android:maxLines="1"
-                android:maxLength="20"
-                android:inputType="textPassword"
+                android:layout_height="40dp"
+                android:text="임시 비밀번호 보내기"
+                android:textColor="@color/white" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/changePWDLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginTop="5dp"
+                android:hint="임시 비밀번호">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/editPWDConfirmLayout"
-            android:layout_width="match_parent"
-            android:hint="새로운 비밀번호확인"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+                <EditText
+                    android:id="@+id/changePWD"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/editPWDConfirm"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editPWDLayout"
                 android:layout_width="match_parent"
-                android:maxLines="1"
-                android:maxLength="20"
-                android:inputType="textPassword"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="새로운 비밀번호">
+
+                <EditText
+                    android:id="@+id/editPWD"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editPWDConfirmLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="새로운 비밀번호확인">
+
+                <EditText
+                    android:id="@+id/editPWDConfirm"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textPassword"
+                    android:maxLength="20"
+                    android:maxLines="1" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-        <Button
-            android:id="@+id/btnDone"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginBottom="30dp"
-            android:text="비밀번호 변경하기"/>
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnDone"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="30dp"
+                android:text="비밀번호 변경하기" />
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
