--- a/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -13,8 +13,8 @@
 
         <RelativeLayout
             android:layout_width="100dp"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -22,13 +22,14 @@
                 android:src="@drawable/logo_main" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:id="@+id/toolbar_division"
-        android:background="@color/colorDivision"
-        android:orientation="horizontal"
-        android:layout_below="@+id/my_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="1dp">
+        android:layout_height="1dp"
+        android:layout_below="@+id/my_toolbar"
+        android:background="@color/colorDivision"
+        android:orientation="horizontal">
 
     </LinearLayout>
 
@@ -55,8 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation_main"/>
-
+        app:menu="@menu/bottom_navigation_main" />
 
 
 </RelativeLayout>
