--- a/damda/app/src/main/res/layouts/activity/layout/activity_trimmer.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_trimmer.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.TrimmerActivity">
-    <life.knowledge4.videotrimmer.K4LVideoTrimmer
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <life.knowledge4.videotrimmer.K4LVideoTrimmer xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/timeLine"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
