--- a/damda/app/src/main/res/layouts/activity/layout/fragment_mission.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_mission.xml
@@ -54,9 +54,9 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="vertical"
-        android:paddingBottom="10dp"
         android:paddingStart="15dp"
-        android:paddingEnd="16dp">
+        android:paddingEnd="16dp"
+        android:paddingBottom="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,9 +65,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:textSize="17sp"
                 android:gravity="center"
-                android:text="다음 레벨까지?" />
+                android:text="다음 레벨까지?"
+                android:textSize="17sp" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -79,10 +79,12 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/family" />
         </LinearLayout>
+
         <Space
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <ProgressBar
             android:id="@+id/progress"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
