--- a/damda/app/src/main/res/layouts/activity/layout/list_item_family.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_family.xml
@@ -2,40 +2,44 @@
     android:id="@+id/list_item_family_layout"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:padding="10dp"
-    android:paddingBottom="0dp"
     android:background="?attr/selectableItemBackground"
-    >
+    android:padding="10dp"
+    android:paddingBottom="0dp">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:textSize="18sp"
             android:text="이름"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:gravity="center_vertical"
-            android:text="이메일"
-            android:layout_marginTop="6dp" />
+            android:text="이메일" />
     </LinearLayout>
+
     <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/birthday"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="06월 22일"
-        android:textColor="@color/bluebell"/>
+        android:textColor="@color/bluebell" />
 
 </LinearLayout>
