--- a/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
@@ -2,72 +2,74 @@
     android:id="@+id/chat_message_item_layout"
     android:layout_width="match_parent"
     android:layout_height="135dp">
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center_vertical">
-    <TextView
-        android:id="@+id/search_fullname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="제목"
-        android:textSize="17sp"
-        android:layout_gravity="center"
-        />
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/search_fullname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="제목"
+            android:textSize="17sp" />
+
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="10dp">
-        </Space>
+            android:layout_height="10dp"></Space>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
-        <TextView
-            android:id="@+id/response"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/black_translucent"
-            android:layout_marginLeft="4dp"
-            android:visibility="gone"/>
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:theme="@style/ButtonStyle"
-            android:textSize="13sp"
-            android:text="수락"
-            />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:theme="@style/DeleteButton"
-            android:textSize="13sp"
-            android:text="거절"
-            />
+            <TextView
+                android:id="@+id/response"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:textColor="@color/black_translucent"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="수락"
+                android:textSize="13sp"
+                android:theme="@style/ButtonStyle" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="거절"
+                android:textSize="13sp"
+                android:theme="@style/DeleteButton" />
         </LinearLayout>
     </LinearLayout>
+
     <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-    />
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/make_album"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="선택할 수 있는\n앨범이 없습니다."
-        android:gravity="center"
-        android:visibility="gone"
-        android:textAlignment="center"
         android:layout_marginRight="15dp"
-        />
+        android:gravity="center"
+        android:text="선택할 수 있는\n앨범이 없습니다."
+        android:textAlignment="center"
+        android:visibility="gone" />
+
     <Spinner
         android:id="@+id/album_spinner"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical">
-    </Spinner>
+        android:layout_gravity="center_vertical"></Spinner>
 </LinearLayout>
