--- a/damda/app/src/main/res/layouts/fragment/layout/activity_family_list.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/activity_family_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.FamilyListActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -18,25 +18,26 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        >
+        android:paddingRight="10dp">
+
         <TextView
             android:id="@+id/member_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="4dp"
-            android:text="@string/family_info"
-            />
+            android:text="@string/family_info" />
+
         <View
-            android:layout_below="@+id/member_info"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#000000"/>
+            android:layout_below="@+id/member_info"
+            android:background="#000000" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/family_list"
-            android:layout_below="@+id/member_info"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/member_info" />
     </RelativeLayout>
 </RelativeLayout>
