--- a/damda/app/src/main/res/layouts/item/layout/list_item_nullalbum.xml
+++ b/damda/app/src/main/res/layouts/item/layout/list_item_nullalbum.xml
@@ -6,29 +6,31 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:layout_marginStart="20dp"
-            android:visibility="gone"/>
-        <ImageView
-            android:id="@+id/null_album_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
-            android:contentDescription="@string/album_image"
-            app:srcCompat="@drawable/album" />
 
-        <TextView
-            android:id="@+id/tv_null_album_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/album_title"
-            android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:textAlignment="center"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/null_album_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@string/album_image"
+        app:srcCompat="@drawable/album" />
+
+    <TextView
+        android:id="@+id/tv_null_album_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:text="@string/album_title" />
 
 </LinearLayout>
