--- a/damda/app/src/main/res/layouts/activity/layout/activity_image_picker.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_image_picker.xml
@@ -15,12 +15,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gallery"
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_above="@+id/upload_layout"/>
 
     <RelativeLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/upload_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
