--- a/damda/app/src/main/res/layouts/activity/layout/activity_image_picker.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_image_picker.xml
@@ -36,6 +36,7 @@
             android:layout_height="55dp"
             android:textSize="20sp"
             android:text="0장 업로드"
+            android:clickable="false"
             android:background="@color/gray"
             android:textColor="@color/white">
         </Button>
