--- a/damda/app/src/main/res/layouts/activity/layout/activity_login.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_login.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLength="20"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
